[project]
authors = [
  {name = "Miriam Burghard", email = "mb@mfa.aero"}
]
dependencies = [
    "gymnasium>=1.0.0",
    "torch>=2.6.0",
    "ray[data,serve,train,tune]>=2.42.1",
    "dm-tree>=0.1.9",
    "scipy>=1.15.1",
    "lz4>=4.4.3",
    "tqdm>=4.67.1",
    "numba>=0.61.0",
    "typeguard>=4.4.2",
    "einops>=0.8.1",
    "hydra-core>=1.3.2",
    "gputil>=1.4.0",
    "matplotlib>=3.10.1",
    "wandb>=0.19.8",
    "timm>=1.0.15",
    "torchvision>=0.21.0",
]
description = "Default template for PDM package"
license = {text = "none"}
name = "matrix-production"
readme = "README.md"
requires-python = "==3.12.*"
version = "0.1.0"

[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "black>=25.1.0",
    "py-spy>=0.4.0",
]
